# SurveySimulator

./: .gitignore  Dockerfile  Makefile  README.md  requirements.txt
.github/workflows/: docker-image.yml
fortran/F95/: Driver.f95  Makefile  common_data.f95  datadec.f95  getsur.f95  numutils.f95  surveysub.f95
python/: MANIFEST.in  pyproject.toml  setup.py
python/examples/: HST_Test.ipynb  Plutino.ipynb  Ring.ipynb  __init__.py  example.ipynb  hotPopulation.ipynb  res_model.py  ring.py
python/ossssim/: __init__.py  ad.py  characterization.py  color.py  core.py  definitions.py  distributions.py  funcs.py  models.py  plotter.py  pos_cart.py
python/ossssim/Characterizations/: __README__.txt  __init__.py
python/ossssim/Characterizations/All_Surveys/: All_Surveys_v11.CDS  All_Surveys_v11.detections  README.allsurveys  TotalAreaOSSOS  pointings-area.list  pointings.list
python/ossssim/Characterizations/All_r_Surveys/: All_r_Surveys_v11.CDS  All_r_Surveys_v11.detections  README.allrsurveys  pointings-area.list  pointings.list
python/ossssim/Characterizations/Deep_Surveys/: Deep_Surveys_v11.CDS  Deep_Surveys_v11.detections
python/ossssim/Characterizations/OSSOS-MA/: MA11l12h.pointings  OSSOS-MA_v11.CDS  OSSOS-MA_v11.detections  README.ossosma  pointings.list
python/tests/: test_color.py  test_model.py  test_osssim.py  test_ssim_util.py
