[project]
name = "ossssim"
version = "0.1.0"
description = "The OSSSOS Survey Simulator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.0.0",
    "astroquery>=0.4.7",
    "ephem>=4.1.6",
    "f90wrap>=0.2.16",
    "matplotlib>=3.10.0",
    "meson>=1.6.1",
    "ninja>=1.11.1.3",
    "scipy>=1.14.1",
    "setuptools>=75.6.0",
]
